--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div>
                 <label class="label" for="rate" >Interest Rate: </label>
-                <input type="range"  id="rate" min="1" max="20" step="0.25" value="10.25">
+                <input type="range"  id="rate" min="1" max="20" step="0.25" value="10.25" oninput="updateRateView()">
                 <span id = "rate_val">10.25%</span> 
             </div>
             <div>
@@ -37,6 +37,8 @@
 
         </br>
         <button onclick="compute()">Compute Interest</button>
+    </br>
+</br>
         <span id = "result">
 
         </span>
@@ -45,7 +47,7 @@
         </br>
 
          <footer>
-         &#169; This Calculator belongs to --your name--
+         &#169; This Calculator belongs to --bala--
     </footer>
         </div>
       
