--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Simple Interest Calculator</title>
+        <title>Web App – Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
@@ -39,9 +39,13 @@
         <button onclick="compute()">Compute Interest</button>
     </br>
 </br>
-        <span id = "result">
+        <div id = "result">
+            If you deposit <span class="resultText" id=pdisplay></span>,</br>
+            at an interest rate of <span class="resultText" id=rdisplay></span>%.</br>
+            You will receive an amount of <span class="resultText" id=idisplay></span>,</br>
+            in the year <span class="resultText" id=ydisplay></span>
 
-        </span>
+        </div>
         </div>
     </br>
         </br>
